--- a/components/section.css
+++ b/components/section.css
@@ -55,7 +55,7 @@
 
 #about h1 {
   font-size: 4rem;
-  color: rgba(255, 217, 0, 0.836);
+  color: var(--color-burlywood)
 }
 
 .box-about h3 {
@@ -123,7 +123,7 @@
   align-content: center;
   justify-content: center;
   align-items: center;
-  color: rgba(255, 217, 0, 0.836);
+  color: var(--color-burlywood);
   font-size: 3rem;
   gap: 20px;
   margin: auto;
@@ -169,7 +169,6 @@
 }
 
 .project-info {
-  background-color: rgba(21, 21, 21, 0.229);
   padding: 5px;
 }
 
@@ -189,7 +188,7 @@
 
 .contact h2 {
   font-size: 4rem;
-  color: rgba(255, 217, 0, 0.836);
+  color: var(--color-burlywood)
 }
 
 .contact-box {
@@ -224,7 +223,7 @@
 
 .contact input,
 .contact textarea {
-  background-color: white;
+  background-color: var(--color-white)
   resize: none;
   border: 1px solid var(--color-white);
   font-size: 1.5rem;
