--- a/components/section.css
+++ b/components/section.css
@@ -49,19 +49,20 @@
   align-items: center;
   flex-direction: column;
   padding: 3rem;
-  margin: 12rem 0rem;
+  margin: 4rem 0rem;
   gap: 1rem;
 }
 
 #about h1 {
   font-size: 4rem;
-  color: var(--color-burlywood)
+  color: var(--color-burlywood);
 }
 
 .box-about h3 {
   margin: 3rem;
   font-size: calc(0.8vw + 0.8rem);
   font-size: 2rem;
+  font-weight: 100px;
 }
 
 .box-about h3 p {
@@ -188,7 +189,7 @@
 
 .contact h2 {
   font-size: 4rem;
-  color: var(--color-burlywood)
+  color: var(--color-burlywood);
 }
 
 .contact-box {
@@ -223,7 +224,7 @@
 
 .contact input,
 .contact textarea {
-  background-color: var(--color-white)
+  background-color: var(--color-white);
   resize: none;
   border: 1px solid var(--color-white);
   font-size: 1.5rem;
