--- a/components/section.css
+++ b/components/section.css
@@ -7,7 +7,7 @@
 }
 
 .person-content {
-  width: 50%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,8 +43,8 @@
 }
 
 #about p {
-  font-size: 1.5rem;
-  font-weight: 100;
+  font-size: 1rem;
+  text-align: justify;
 }
 
 .box-about {
@@ -64,19 +64,13 @@
 }
 
 .box-about h3 {
-  margin: 3rem;
-  font-size: calc(0.8vw + 0.8rem);
   font-size: 2rem;
-  font-weight: 100px;
 }
 
-.box-about h3 p {
-  display: inline-block;
-  width: fit-content;
-  padding: 2px 4px;
-  border-radius: 4px;
+.box-about h2 {
+  color: rgb(203, 226, 30);
+  font-size: 1.5rem;
 }
-
 .box-about h4 {
   font-weight: 200;
   display: block;
@@ -85,7 +79,6 @@
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   unicode-bidi: isolate;
-  font-size: 2rem;
 }
 
 .section-subtitle {
@@ -98,7 +91,6 @@
 .skills-content {
   display: flex;
   justify-content: center;
-  margin: 5rem 0rem 2rem;
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
@@ -141,7 +133,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 12rem 0rem;
+  margin-top: 64px;
   gap: 3rem;
 }
 #projects h2 {
@@ -204,19 +196,16 @@
   align-items: center;
   flex-direction: column;
   padding: 3rem;
-  margin: 15rem 0rem;
   gap: 1rem;
 }
 
 .contact p {
-  font-weight: 200;
   display: block;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   unicode-bidi: isolate;
-  font-size: 2rem;
   color: var(--color-white);
 }
 
