--- a/components/header.css
+++ b/components/header.css
@@ -1,16 +1,10 @@
 #header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-
   width: 100%;
-
   padding: 15px 30px;
   position: fixed;
-
-  background: "transparent";
-  transition: all 0.3s ease-out;
-
   z-index: 2;
 }
 
@@ -57,6 +51,7 @@
   );
   filter: blur(80px);
   animation: left 20s infinite;
+  display: none;
 }
 
 #right {
@@ -112,6 +107,7 @@
     right: 1300px;
   }
 }
+*/
 
 /* end animated background */
 
