--- a/components/nav.css
+++ b/components/nav.css
@@ -1,12 +1,12 @@
 .navbar {
-  max-width: 350px;
   width: 100%;
 }
 
 .navbar ul {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-start;
+  gap: 20px;
 }
 
 .navbar ul li {
@@ -16,7 +16,6 @@
 .navbar ul li a {
   text-decoration: none;
   color: var(--color-white);
-
   font-size: 1.4rem;
   font-weight: 700;
 }
