--- a/components/responsive.css
+++ b/components/responsive.css
@@ -1,31 +1,26 @@
-/* Responsive untuk ponsel */
+/* Responsif for  ponsel */
 
 @media only screen and (max-width: 480px) {
   #header {
-    padding: 10px 15px;
+    justify-content: center;
   }
+
   .navbar {
-    flex-direction: row;
-    width: 100%;
-    height: auto;
     position: static;
     padding: 10px;
-    justify-content: space-between;
-    background-color: transparent;
   }
-  .navbar ul {
-    flex-direction: row;
-    width: 100%;
-    padding: 0;
-  }
+
   .navbar ul li {
     margin-bottom: 0;
     margin-right: 10px;
   }
 
+  .navbar ul {
+    justify-content: center;
+  }
+
   .navbar ul li a {
     font-size: 1.2rem;
-    padding: 10px;
   }
 
   .navbar ul li a:hover {
@@ -38,8 +33,7 @@
     width: 100%;
   }
   .person-content {
-    width: 80%;
-    font-size: 2rem;
+    width: 100%;
   }
   .heading-line1 {
     font-size: 3rem;
@@ -50,12 +44,18 @@
   }
   .box-about {
     width: 80%;
+    padding: 20px;
   }
   .box-projects {
-    width: 80%;
+    margin-top: 60px !important ;
+    width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   .contact-box {
     width: 80%;
+    margin-top: 60px;
+    margin-bottom: 0px;
   }
 
   #about h1 {
@@ -64,31 +64,31 @@
   }
 
   #about h3 {
-    font-size: 15px;
+    font-size: 25px;
     text-align: center;
     width: 100%;
+    color: bisque;
   }
 
   #about p {
-    font-size: 10px;
+    font-size: 15px;
     text-align: justify;
+    padding: 5px;
+  }
+
+  .box-about h3 p {
+    font-size: 30px;
   }
 
   .skills-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10;
-    padding: 0;
-    margin: 0;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .skills-items img {
     width: 40px;
     height: 40px;
     display: block;
-    margin: 0;
   }
 
   .skills-items {
@@ -98,10 +98,9 @@
     justify-content: center;
     align-items: center;
   }
-  .box-projects {
-    width: 100%;
-    padding: 0;
-    margin: 0;
+
+  .skills {
+    gap: 20px;
   }
 
   .projekts-heading {
@@ -119,6 +118,14 @@
     flex-direction: column;
     width: 100%;
     padding: 10px;
+  }
+
+  .project-left {
+    gap: 0px;
+  }
+
+  .project-right {
+    gap: 0px;
   }
 
   .project-image-container img {
@@ -153,7 +160,7 @@
   }
 
   h2.contact-heading {
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
     margin: 10px 0;
   }
@@ -179,88 +186,500 @@
   .contact-form-error {
     font-size: 0.8rem;
     color: red;
+    margin-top: 0px;
+  }
+
+  .animated-background {
+    display: none;
   }
 }
-
+.contact-form-message {
+}
 /* 
 Responsif for tablet */
-
-@media only screen and (min-width: 481px) and (max-width: 768px) {
+/* Responsif untuk tablet */
+@media only screen and (min-width: 481px) and (max-width: 1023px) {
   #header {
-    padding: 15px 20px;
+    justify-content: center;
   }
 
   .navbar {
-    padding: 15px;
-    justify-content: space-between;
+    position: static;
+    padding: 10px;
+  }
+
+  .navbar ul li {
+    margin-bottom: 0;
+    margin-right: 10px;
   }
 
   .navbar ul li a {
-    font-size: 1.4rem;
-    padding-bottom: 100px;
+    font-size: 1.2rem;
+    padding: 10px;
   }
 
+  .navbar ul li a:hover {
+    color: var(--color-burlywood);
+  }
   #person,
   #about,
   #projects,
   #contact {
-    width: 90%;
-    margin: auto;
-    padding: 10px;
-  }
-
-  .person-content {
     width: 100%;
-    font-size: 2.5rem;
   }
-
+  .person-content {
+    width: 80%;
+  }
   .heading-line1 {
-    font-size: 3.5rem;
-  }
-  .heading-line2 {
     font-size: 3rem;
   }
 
+  .heading-line2 {
+    font-size: 2.5rem;
+  }
   .box-about {
-    padding: 15px;
+    width: 80%;
+    padding: 0px;
+  }
+  .box-projects {
+    margin-top: 60px !important ;
+    width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .contact-box {
+    width: 80%;
+    margin-top: 60px;
+    margin-bottom: 0px;
   }
 
-  .box-projects {
-    padding: 15px;
+  #about h1 {
+    font-size: 2rem;
+    text-align: justify;
+  }
+
+  #about h3 {
+    font-size: 25px;
+    text-align: center;
+    width: 100%;
+    color: bisque;
+  }
+
+  #about p {
+    font-size: 15px;
+    text-align: justify;
+    padding: 5px;
+  }
+
+  .box-about h3 p {
+    font-size: 30px;
+  }
+
+  .skills-content {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .skills-items img {
+    width: 40px;
+    height: 40px;
+    display: block;
+  }
+
+  .skills-items {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .skills {
+    gap: 20px;
+  }
+
+  .projekts-heading {
+    font-size: 1.5rem;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  h2.projekts-heading.section-heading {
+    font-size: 2rem !important;
+    text-align: center;
+    margin: 10px 0;
+  }
+  .project {
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+  }
+
+  .project-left {
+    gap: 0px;
+  }
+
+  .project-right {
+    gap: 0px;
+  }
+
+  .project-image-container img {
+    width: 100%;
+    height: auto;
+  }
+
+  .project-info h3 {
+    font-size: 1rem;
+    text-align: center;
+    margin: 10px 0;
+  }
+
+  .project-info p {
+    font-size: 0.8rem;
+    text-align: center;
+  }
+
+  #contact {
+    padding: 0;
+    margin: 0;
+  }
+
+  section.contact {
+    padding-top: 0;
+    margin-top: 0;
   }
 
   .contact-box {
-    padding: 15px;
+    width: 100%;
+    padding: 10px;
   }
 
   h2.contact-heading {
     font-size: 2rem;
-    margin: 15px 0;
     text-align: center;
+    margin: 10px 0;
   }
 
   #contact p {
-    font-size: 1.2rem;
-    margin-bottom: 15px;
+    font-size: 1rem;
     text-align: center;
   }
 
   .contact-form input,
   .contact-form textarea {
-    padding: 10px;
+    width: 100%;
+    padding: 8px;
     margin-bottom: 10px;
   }
 
   .contact-form-submit {
+    width: 100%;
     padding: 10px;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .contact-form-error {
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: red;
+    margin-top: 0px;
+  }
+
+  .animated-background {
+    display: none;
   }
 }
 
-@media only screen and (min-width: 769px) {
+@media (min-width: 1638px) {
+  #person {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .person-content {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: var(--color-white);
+  }
+
+  .heading-line1 {
+    font-size: 6rem;
+  }
+
+  .heading-line2 {
+    font-size: 4rem;
+  }
+
+  .heading-line1 span {
+    color: var(--color-burlywood);
+    font-weight: 500;
+  }
+
+  /* end person */
+
+  /* start about */
+
+  #about {
+    height: auto;
+    width: 100%;
+    display: flex;
+    color: var(--color-white);
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #about p {
+    font-size: 1.5rem;
+    font-weight: 100;
+  }
+
+  .box-about {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 3rem;
+    margin: 4rem 0rem;
+    gap: 1rem;
+  }
+
+  #about h1 {
+    font-size: 4rem;
+    color: var(--color-burlywood);
+  }
+
+  .box-about h3 {
+    margin: 3rem;
+    font-size: calc(0.8vw + 0.8rem);
+    font-size: 2rem;
+    font-weight: 100px;
+    align-items: center;
+  }
+
+  .box-about h3 p {
+    display: inline-block;
+    width: fit-content;
+    padding: 2px 4px;
+    border-radius: 4px;
+  }
+
+  .box-about h4 {
+    font-weight: 200;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+    font-size: 2rem;
+  }
+
+  .section-subtitle {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+
+  .skills-content {
+    display: flex;
+    justify-content: center;
+    margin: 5rem 0rem 2rem;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .skills {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .skills-items {
+    display: flex;
+    align-items: center;
+    position: relative;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  /* end about */
+
+  #projects {
+    height: auto;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-burlywood);
+    font-size: 3rem;
+    gap: 20px;
+    margin: auto;
+  }
+
+  .box-projects {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    gap: 3rem;
+  }
+  #projects h2 {
+    font-size: 4rem;
+  }
+
+  .project {
+    background-color: rgba(79, 79, 138, 0.75);
+    border-radius: 10px;
+    width: 100%;
+  }
+
+  .project-left {
+    display: flex;
+    gap: 2rem;
+    color: var(--color-white);
+    padding: 30px 0rem;
+    align-self: flex-start;
+    align-items: center;
+  }
+
+  .project-right {
+    display: flex;
+    gap: 2rem;
+    color: var(--color-white);
+    padding: 30px 0rem;
+    align-self: flex-end;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+  }
+
+  .project-info {
+    padding: 5px;
+  }
+
+  /* end project */
+
+  /* start contact */
+
+  #contact {
+    height: auto;
+    width: 100%;
+    display: flex;
+    color: var(--color-white);
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact h2 {
+    font-size: 4rem;
+    color: var(--color-burlywood);
+  }
+
+  .contact-box {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 3rem;
+    gap: 1rem;
+    margin-bottom: 90px;
+  }
+
+  .contact p {
+    font-weight: 200;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+    font-size: 2rem;
+    color: var(--color-white);
+  }
+
+  .contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contact input,
+  .contact textarea {
+    background-color: var(--color-white);
+    resize: none;
+    border: 1px solid var(--color-white);
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .contact-form-name,
+  .contact-form-email {
+    margin-bottom: 6px;
+    padding: 1rem;
+    height: 4rem;
+  }
+
+  .contact-form-message {
+    height: 12rem;
+    padding: 1rem;
+  }
+
+  .form-error {
+    align-self: start;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.5;
+  }
+
+  .form-error-name,
+  .form-error-email,
+  .form-error-Message {
+    display: none;
+  }
+
+  .contact-form-error {
+    margin-top: 1.5rem;
+    height: 7rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  button.contact-form-submit {
+    padding: 10px;
+  }
+
+  /* end contact */
+
+  .footer {
+    display: flex;
+    justify-content: center;
+  }
+
+  .links a img {
+    width: calc(2vw + 0.8rem);
+    height: calc(2vw + 0.8rem);
+
+    margin: calc(0.8vw + 0.8rem);
+    filter: brightness(0.8);
+    transition: all 0.3s ease;
+  }
 }
