--- a/global.css
+++ b/global.css
@@ -6,10 +6,14 @@
 
 html {
   scroll-behavior: smooth;
-  font-size: 10px;
+  font-size: 1rem;
   background: var(--color-black);
+  line-height: 1.6;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
